[package]
name = "re-init-rc"
version = "0.1.0"
edition = "2021"
description = "Wrappers for Rc and Arc weak pointers for auto re-initialization of inner value on access when it is already dropped."
repository = "https://github.com/crsov/re-init-rc/"
keywords = ["arc", "rc"]
categories = ["data-structures", "memory-management"]
license = "MIT"

[dependencies]
